[#IP-194] [#IP-194] changed index.yaml spec
