# openapi/index.yaml
@@ -39,7 +39,135 @@ paths:
         '404':
           description: Not found.
       parameters: []
+  /certificate:
+    post:
+      operationId: getCertificate
+      summary: Retrieve a certificate for a given Citizen
+      description: >-
+        Given a Citizen's fiscal code and an OTP (the auth code previously sent
+        via IO Message), a Certificate is returned with ID, encoded QR-code,
+        expiration date and a markdown text with all meaningful information to
+        be shown to Citizens.
+      parameters:
+        - name: accessData
+          in: body
+          schema:
+            $ref: '#/definitions/GetCertificateParams'
+      responses:
+        '200':
+          description: >-
+            A Certificate exists and it's found for the given access data. It is
+            retrieved regardless of it's expired or its current status
+          schema:
+            $ref: '#/definitions/Certificate'
+        '400':
+          description: Payload has bad format
+        '403':
+          description: >-
+            Access data provided are invalid or no Certificate has been emitted
+            for the given Citizen
+        '500':
+          description: Generic server error
 definitions:
+  GetCertificateParams:
+    type: object
+    properties:
+      fiscal_code:
+        type: string
+        description: fiscal code which identifies the Citizen requesting the Certificate
+      auth_code:
+        type: string
+        description: OTP previously sent to the Citizen
+    required:
+      - fiscal_code
+      - auth_code
+  Certificate:
+    x-one-of: true
+    allOf:
+      - $ref: '#/definitions/ValidCertificate'
+      - $ref: '#/definitions/RevokedCertificate'
+  ValidCertificate:
+    type: object
+    properties:
+      id:
+        description: Unique identifier of the Certificate
+        type: string
+      info:
+        description: >-
+          A markdown-formatted text in which show Certificate information for
+          the Citizen to read.
+        type: string
+      qr_code:
+        description: >-
+          The qr-code image to be shown to authorities for Certificate
+          validation
+        $ref: '#/definitions/QRCode'
+      status:
+        description: must be 'valid'
+        type: string
+        enum:
+          - valid
+    required:
+      - id
+      - markdown
+      - qr_code
+      - status
+  RevokedCertificate:
+    type: object
+    properties:
+      id:
+        description: Unique identifier of the Certificate
+        type: string
+      info:
+        description: >-
+          A markdown-formatted text in which show Certificate information for
+          the Citizen to read.
+        type: string
+      status:
+        description: must be 'revoked'
+        type: string
+        enum:
+          - revoked
+      revoke_reason:
+        description: >-
+          A human-readable plain text which explains why the certificate has
+          been revoked
+        type: string
+        maxLength: 200
+      revoked_on:
+        description: The date the Certificate has been revoked on
+        $ref: '#/definitions/Timestamp'
+    required:
+      - id
+      - markdown
+      - status
+      - revoke_reason
+      - revoked_on
+  Timestamp:
+    description: A date-time field in ISO-8601 format and UTC timezone.2
+    type: string
+    format: UTCISODateFromString
+    example: '2021-10-13T00:00:00.000Z'
+  QRCode:
+    description: A qr code imamge encoded into a base64 string
+    type: object
+    properties:
+      mime_type:
+        description: the formate the image has been encoded in
+        type: string
+        enum:
+          - image/png
+          - image/svg
+      content:
+        description: a base64 string representing the image to be shown
+        type: string
+    required:
+      - mime_type
+      - content
+    example:
+      mime_type: image/png
+      content: >-
+        PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMyAyMyI+PHBhdGggZmlsbD0iYmxhY2siIGQ9Ik0xIDFoN3Y3aC03ek05IDFoMXYxaC0xek0xMSAxaDJ2MWgtMXYxaC0ydi0xaDF6TTE1IDFoN3Y3aC03ek0yIDJ2NWg1di01ek0xNiAydjVoNXYtNXpNMyAzaDN2M2gtM3pNOSAzaDF2MWgtMXpNMTIgM2gxdjJoMXY0aC0xdi0yaC0xdjNoLTF2MWgxdi0xaDF2MWgxdjFoLTF2MWgydi0xaDF2MmgtNHYtMmgtMXYxaC0xdi0yaC0xdi0xaDF2LTFoMXYtMmgtMXYxaC0xdi0yaDF2LTJoMnpNMTcgM2gzdjNoLTN6TTEgOWgxdjFoLTF6TTMgOWgxdjFoLTF6TTcgOWgydjFoLTJ6TTE2IDloMXYxaC0xek0xOSA5aDF2MWgtMXpNMjEgOWgxdjJoLTJ2LTFoMXpNNCAxMGgydjFoLTF2MWgtMXpNMTQgMTBoMnYxaC0yek0xIDExaDJ2MWgtMXYxaDF2LTFoMXYxaDF2LTFoMXYtMWgzdjFoLTJ2MWgtMXYxaC01ek0xNyAxMWgxdjFoMXYxaDF2MmgtMXYtMWgtMXYtMWgtMXpNMTkgMTFoMXYxaC0xek0yMCAxMmgydjZoLTF2LTJoLTF2LTFoMXYtMmgtMXpNNyAxM2gxdjFoLTF6TTkgMTNoMXYzaC0xek0xNiAxNGgydjFoLTF2MWgtM3YtMWgyek0xIDE1aDd2N2gtN3pNMTEgMTVoMXYxaC0xek0xOCAxNWgxdjFoLTF6TTIgMTZ2NWg1di01ek0xMyAxNmgxdjFoLTF6TTE5IDE2aDF2MWgtMXpNMyAxN2gzdjNoLTN6TTExIDE3aDF2MWgtMXpNMTQgMTdoNXYxaC0xdjNoLTF2LTFoLTF2LTFoLTF2MWgxdjJoLTR2LTFoLTJ2LTFoMXYtMWgxdi0xaDF2MWgxek0xMCAxOGgxdjFoLTF6TTE5IDE4aDF2MWgtMXpNOSAxOWgxdjFoLTF6TTIwIDE5aDJ2M2gtM3YtMWgydi0xaC0xek0xMyAyMHYxaDF2LTF6TTkgMjFoMXYxaC0xeiIvPjwvc3ZnPg==
   Input:
     type: object
     properties:
